--- a/index.html
+++ b/index.html
@@ -24,29 +24,12 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
-            z-index: -1;
-        }
-
-        #overlay {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            color: white;
-            text-align: center;
-        }
-
-        h1 {
-            font-size: 3rem;
-        }
-
-        p {
-            font-size: 1.5rem;
         }
     </style>
 </head>
 <body>
-    
-        <source src=video.mov" type="video/quicktime">>
+    <video autoplay muted loop>
+        <source src="video.mov" type="video/quicktime">
+    </video>
 </body>
 </html>
